temp fix on nav bar collapse menu fixed the color so you can read the drop down menu

--- a/src/components/Navbar/navbar.styles.css
+++ b/src/components/Navbar/navbar.styles.css
@@ -6,11 +6,11 @@
   height: 75px;
 }
 
-.col-md-12 {
-  padding-right: 0;
-  padding-left: 0;
+/*.col-md-12 {*/
+/*  padding-right: 0;*/
+/*  padding-left: 0;*/
 
-}
+/*}*/
 
 .nbar-name {
   margin-left: 7rem !important;
@@ -22,8 +22,10 @@
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 10px 10px 15px rgba(0,0,0,1);
-  padding: 10px;
+
+  /*background-color: #408CAA !important;*/
 }
+
 
 .nbar-name:hover {
   background-color: black;
@@ -34,3 +36,18 @@
 .menu-spacing {
   margin-bottom: 100px;
 }
+
+@media only screen and (max-width: 1281px) {
+  .nbar-name {
+    background-color: #408CAA;
+
+  }
+}
+
+
+
+/*@media only screen and (max-width: 1281px) {*/
+/*    .navbar-expand {*/
+/*      flex-direction: row;*/
+/*    }*/
+/*}*/
